--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,25 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800);
 
 /* ==========================================================================
    Home
    ========================================================================== */
-.intro{
+.home{
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
-	margin-top: 25em;
+	margin-top: 22em;
 }
-#name-intro{
+#name-home{
 	font-size: 60px;
+	font-weight: 800;
 }
-
-.social-icons li {
+#name{
+	font-weight: 400;
+	color: #808080;
+}
+.social-icons li, i{
 	list-style-type: none;
 	display: inline;
+	color: #808080;
 	font-size: 2em;
 	padding: 0 1px 0 1px;
-}
-
-i {
 }
