contact box, skeleton

--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,12 @@
 	height: 100px;
 	display: inline-block;
 }
+
+/* ==========================================================================
+   Contact
+   ========================================================================== */
+  
+#contact{
+	margin-top: 22em;
+	text-align: center;
+}
