--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,6 @@
 	padding-top: 22%;
   height: 100vh;
 }
-.home-container:before {
-    background: url("../images/slide_background.jpg") repeat scroll 0 0 transparent;
-    opacity: 0.75;
-    bottom: 0;
-    content: "";
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-		filter: blur(0.3px);
-		-webkit-filter: blur(0.3px);
-}
 .home-content{
 	background: rgba(255, 255, 255, 0.5);
 	border-radius: 3px;
@@ -46,6 +33,9 @@
 #name{
 	font-weight: 400;
 	color: #808080;
+}
+.fa:hover{
+	font-weight: bold;
 }
 .social-icons li, i{
 	list-style-type: none;
