--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
 	font-weight: 800;
 }
 #name{
-	font-weight: 400;
+	font-weight: 540;
 	color: #808080;
 }
 .fa:hover{
@@ -41,7 +41,7 @@
 	list-style-type: none;
 	display: inline;
 	color: #808080;
-	font-size: 1.7em;
+	font-size: 2.0em;
 	padding: 0 1px 0 1px;
 }
 .social-icons a{
@@ -67,7 +67,8 @@
 	border-radius: 50%;
 }
 #about-info{
-	padding-top: 10%;
+	padding-top: 6%;
+	font-size: 17px;
 }
 #about-info a{
 	text-decoration: none;
@@ -77,7 +78,7 @@
    Experience
  ========================================================================== */
 .experience-container{
-	height: 80vh;
+	height: 95vh;
 	background-color: #EEE;
 }
 #company-logo{
@@ -86,7 +87,7 @@
 }
 #experience-header{
 	font-family: 'Open Sans', sans-serif;
-	padding: 15px;
+	padding: 6%;
 	text-align: center;
 }
 #company-info{
@@ -95,7 +96,17 @@
 #company-info a{
 	text-decoration: none;
 }
-
+#resume{
+	padding: 10px;
+	text-align: center;
+	border-radius: 7px;
+	border: 2px solid #808080;
+	width: 140px;
+	height: 50px;
+	text-decoration: none;
+	font-size: 20px;
+	display: inline-block
+}
 
 /* ==========================================================================
    Contact
