--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,11 @@
 #name-home{
 	font-size: 60px;
 	font-weight: 800;
+	color: #262626;
 }
 #name{
 	font-weight: 540;
-	color: #808080;
+	color: #c2324a;
 }
 .fa:hover{
 	font-weight: bold;
@@ -40,7 +41,7 @@
 .social-icons li, i{
 	list-style-type: none;
 	display: inline;
-	color: #808080;
+	color: #0F0F0F;
 	font-size: 2.0em;
 	padding: 0 1px 0 1px;
 }
@@ -91,7 +92,7 @@
 }
 #experience-header{
 	font-family: 'Open Sans', sans-serif;
-	padding: 6%;
+	padding: 40px 0 5px 0;
 	text-align: center;
 }
 #company-info{
